--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,69 @@
-/* * {
-    box-sizing: border-box;
-} */
+{
+  box-sizing: border-box;
+  
+}
 
 body {
-    font-family: 'Courier New', Courier, monospace;
-    background-color: #f8f8f8;
+  font-family: Arial, Helvetica, sans-serif;
+  
 }
 
-h1, h2, h3, h4, h5 {
-    font-size: 22px; 
+header {
+  background-color: #3ca8c9;
+  padding: 20px;
+  text-align: center;
+  font-size: 35px;
+  color: white;
 }
+
+
+section {
+  display: -webkit-flex;
+  display: flex;
+}
+
+nav {
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  background: #95a3ad;
+  padding: 20px;
+}
+
+nav ul {
+  
+  list-style-type: none;
+  padding: 0;
+
+}
+
+
+article {
+  -webkit-flex: 3;
+  -ms-flex: 3;
+  flex: 3;
+  background-color: #f1f1f1;
+  padding: 10px;
+}
+
+
+footer {
+  background-color: #777;
+  padding: 30px;
+  text-align: center;
+  color: white;
+}
+
+
+@media (max-width: 600px) {
+  section {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+}
+
+
+img {
+    size-adjust: 40px;
+}
+
