--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,9 @@
-{
+* {
   box-sizing: border-box;
-  
 }
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  
 }
 
 header {
@@ -15,7 +13,6 @@ header {
   font-size: 35px;
   color: white;
 }
-
 
 section {
   display: -webkit-flex;
@@ -31,12 +28,9 @@ nav {
 }
 
 nav ul {
-  
   list-style-type: none;
   padding: 0;
-
 }
-
 
 article {
   -webkit-flex: 3;
@@ -46,14 +40,12 @@ article {
   padding: 10px;
 }
 
-
 footer {
   background-color: #777;
   padding: 30px;
   text-align: center;
   color: white;
 }
-
 
 @media (max-width: 600px) {
   section {
@@ -62,8 +54,6 @@ footer {
   }
 }
 
-
 img {
     size-adjust: 40px;
 }
-
