removed alot of flex stuff

--- a/styles.css
+++ b/styles.css
@@ -20,34 +20,37 @@ header {
 }
 
 section {
-  display: -webkit-flex;
   display: flex;
 }
 
 nav {
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  background: #12629b;
-  padding-top: 30px;
+  background: #333333;
+  padding-top: 50px;
 }
 
-nav ul {
+ul {
   list-style-type: none;
+  margin: 0;
   padding: 0;
+  overflow: hidden;
+  background-color: #333333;
 }
 
 li,
 a {
-  margin: 18px;
+  display: block;
+  padding: 16px;
+  text-align: center;
   text-decoration: none;
   color: #f8ecec;
 }
 
+li a:hover {
+  background-color: #111111;
+}
+
 article {
-  -webkit-flex: 3;
-  -ms-flex: 3;
-  flex: 3;
+  flex: 5;
   background-color: white;
   padding-bottom: 25px;
 }
@@ -58,13 +61,6 @@ footer {
   text-align: center;
   color: white;
   height: 100%;
-}
-
-@media (max-width: 600px) {
-  section {
-    -webkit-flex-direction: column;
-    flex-direction: column;
-  }
 }
 
 img {
