fiddled with CSS

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,6 @@ section {
 
 nav {
   background: #333333;
-  padding-top: 50px;
 }
 
 ul {
@@ -36,17 +35,24 @@ ul {
   background-color: #333333;
 }
 
-li,
 a {
   display: block;
   padding: 16px;
   text-align: center;
   text-decoration: none;
   color: #f8ecec;
+  border: 1px solid #f8ecec;
 }
 
-li a:hover {
-  background-color: #111111;
+a:hover {
+  border-radius: 8px;
+  color: #111111;
+  background-color: #f8ecec;
+}
+
+a:active {
+  color: #111111;
+  background-color: #f8ecec;
 }
 
 article {
